--- a/scripts/playground.html
+++ b/scripts/playground.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Docs SearchBar playground</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap/3.3.6/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="http://127.0.0.1:8080/docs-searchbar.min.css" />
+    <link rel="stylesheet" href="http://127.0.0.1:8080/searchbar.min.css" />
   </head>
   <body>
     <div class="container">
@@ -13,14 +13,14 @@
       </div>
       <div class="col-md-12">
         <div class="input-group">
-          <input type="search" placeholder="docs-searchbar input" class="form-control" id="q">
+          <input type="search" placeholder="searchbar input" class="form-control" id="q">
         </div>
       </div>
     </div>
     <!-- at the end of the BODY -->
-    <script src="http://127.0.0.1:8080/docs-searchbar.js"></script>
+    <script src="http://127.0.0.1:8080/searchbar.js"></script>
     <script>
-      docsSearchBar({
+      searchBar({
         // Test with MeiliSearch Documentation
         meilisearchHostUrl: 'https://e10b17e6.getmeili.com',
         apiKey: 'R62XWZPJG794YB5VFOADHTNQEKLCISM01U38',
